# synapse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.claude/: launch.json
.github/: dependabot.yml
api/: openapi.oracle.yaml
client/: Cargo.toml  index.html  main.ts  package-lock.json  package.json  vite.config.mts
dev-tools/: build-viz-wasm.sh  build-wasm.sh  check-bundle-budget.sh  check-conventions.sh  check-page-budget.sh  coverage.sh  dev  dev-astro  dev-leptos  e2e  e2e-auth  gen-api-types.sh  lib-ports.sh  start.sh  synapse-rs.insomnia.json
docs/: cutover-plan.md  qna.md  (+2 more)
viz-wasm/: Cargo.toml
viz-wasm/src/: api.rs  blocks.rs  entry.rs  host.rs  lib.rs  log.rs  modal.rs  mount.rs  registry.rs  session.rs  theme.rs  transport.rs
viz-wasm/src/engine/: decoder.rs  graph.rs  graph_tests.rs  markers.rs  mod.rs  playback.rs  render_family.rs  shapes.rs  trace.rs  vocabulary.rs
viz-wasm/src/engine/adapt/: callstack.rs  cards.rs  cleanup.rs  cursors.rs  diff.rs  error.rs  flow.rs  mod.rs  narration.rs  projection.rs  rooting.rs  segmentation.rs  snapshot.rs  vocab.rs
viz-wasm/src/engine/geometry/: chain.rs  chain_tests.rs  constants.rs  graph_layout.rs  graph_layout_tests.rs  grid.rs  linear.rs  linear_tests.rs  mod.rs  tree.rs  tree_tests.rs
viz-wasm/src/ffi/: editor.rs  mod.rs  tracer.rs
viz-wasm/src/render/: buckets.rs  cells.rs  chain.rs  dom.rs  dual.rs  graph_canvas.rs  grid_table.rs  list_chain.rs  mod.rs  strip.rs  tree.rs
viz-wasm/tests/: adapt_stages.rs  cortex_goldens.rs
(+408 files in other folders)
